--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html meta="UTF-8" lang="en">
-<head><link rel="index.css"/>
+<head><link rel="stylesheet" href="index.css"/>
   <title>Dragons</title>
 </head>
 <body>
