--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li>Cockatrices</li>
       <li>And many more...</li>
     </ul>
-    <img src="https://qph.cf2.quoracdn.net/main-qimg-2e81229dc548ba266d54b314614d58c3"
+    <div class="image-two"><img src="https://qph.cf2.quoracdn.net/main-qimg-2e81229dc548ba266d54b314614d58c3"></div>
   </div>
     
 
