--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </div>
   <div class="hd2cont">
   <p1>Dragons are amongst the most renowned mythical beings to ever grace the minds of mankind. With their extravagant lore, exceedingly beautiful designs, and massive size, these beasts were legends and were destined to always be a part of human culture.</p1>
-  <p2>If dragons actually existed, undoubtedly they would be the apex among all living creatures. Their abilities to fly and breathe deadly fire would have snuffed out any other competition that could have ever existed</p2>
+  <p2>If dragons actually existed, undoubtedly they would be the apex among all living creatures. Their abilities to fly and breathe deadly fire would have snuffed out any other competition that could have ever existed.</p2>
   <p3>Listed below are the various types of dragons that exist in mythos:</p3>
   <div class="first-list">
     <ul>
