--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       <li>Hydras</li>
       <li>Cockatrices</li>
       <li>And many more...</li>
-    </ul>
-    <div class="image-two"><img src="https://qph.cf2.quoracdn.net/main-qimg-2e81229dc548ba266d54b314614d58c3"></div>
+    </ul><div class="image-two"><img src="https://qph.cf2.quoracdn.net/main-qimg-2e81229dc548ba266d54b314614d58c3"></div>
   </div>
     
 
