--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
       <li>Wyverns</li>
       <li>Amphipteres</li>
       <li>Drakes</li>
-      <li>Lindwurms</li>
+      <li>Lindwurms</li><div class="img2"><img src="https://qph.cf2.quoracdn.net/main-qimg-2e81229dc548ba266d54b314614d58c3"></div>
       <li>Hydras</li>
       <li>Cockatrices</li>
       <li>And many more...</li>
-    </ul><div class="img2"><img src="https://qph.cf2.quoracdn.net/main-qimg-2e81229dc548ba266d54b314614d58c3"></div>
+    </ul>
   </div>
   <div class="search-button"><input type="text" id="dragon-search" placeholder="Enter dragon type">
 <button id="search-button">Search</button></div>
 
 
 
-</</body>
+</body>
 
 
 
