--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li>Hydras</li>
       <li>Cockatrices</li>
       <li>And many more...</li>
-      <img class="img2" src="https://qph.cf2.quoracdn.net/main-qimg-2e81229dc548ba266d54b314614d58c3">
+      <img class="img2" src="https://qph.cf2.quoracdn.net/main-qimg-2e81229dc548ba266d54b314614d58c3"/>
     </ul>
   </div>
   <div class="search-button"><input type="text" id="dragon-search" placeholder="Enter dragon type">
